@@ -464,5 +464,17 @@ public class TestJvm extends TestCase {
         String jvmOptions = "-Xss128k -XX:+PrintGCDetails -XX:+DisableExplicitGC";
         Jvm jvm = new Jvm(jvmOptions, null);
         Assert.assertEquals("-XX:+PrintGCDetails option incorrect.", "-XX:+PrintGCDetails", jvm.getPrintGCDetailsOption());        
+    } 
+    
+    public void testUseParNewGC() {
+        String jvmOptions = "-Xss128k -XX:+UseParNewGC -XX:+DisableExplicitGC";
+        Jvm jvm = new Jvm(jvmOptions, null);
+        Assert.assertEquals("-XX:+UseParNewGC option incorrect.", "-XX:+UseParNewGC", jvm.getUseParNewGCOption());        
+    }
+    
+    public void testUseConcMarkSweepGC() {
+        String jvmOptions = "-Xss128k -XX:+UseConcMarkSweepGC -XX:+DisableExplicitGC";
+        Jvm jvm = new Jvm(jvmOptions, null);
+        Assert.assertEquals("-XX:+UseConcMarkSweepGC option incorrect.", "-XX:+UseConcMarkSweepGC", jvm.getUseConcMarkSweepGCOption());        
     }    
 }
